# Context-Forge

./: .gitignore  LICENSE  README.md  pyproject.toml  vercel.json
data/: manifest.yml
docs/: writeup.md
public/: app.js  index.html  styles.css
public/results/: classifier_report.json  latest_results.json
src/compress_bench/: __init__.py  classifier.py  cli.py  data.py  plots.py  quality.py  runner.py  schemas.py  strategies.py  tokenizers.py
